倒数第二天

--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -104,6 +104,11 @@ a {
 a:hover {
     text-decoration: none;
 }
+
 html {
     font-size: calc(100 / 750 * 100vw);
+}
+
+.van-nav-bar .van-icon {
+    color: red !important;
 }
